# exoproximo

./: .gitignore  Pipfile  README.md  TODO.md  keppler_objs_random_forest.ipynb  neo_analysis.ipynb  neo_api_query.ipynb  pyproject.toml
.github/workflows/: pages.yml  ui.yml
data/MITHNEOS/: README.md
data/MITHNEOS/Marsset2024_Stypes/: a000003.Noonan.txt  a000020.141222.Thomas.txt  a000020.Hya64.txt  a000020.Reddy.txt  a000695.sp95.txt  a000808.sp92.txt  a001751.sp66.txt  a001839.Ragazza.txt  a002373.Immo.txt  a002386.Nikonov.txt  a002521.Heidi.txt  a003860.Plovdiv.txt  a004579.150317.Thomas.txt  a004579.sp299.txt  a005394.Chrysa.txt  a006070.sp125n1.txt  a006070.sp126.txt  a007760.sp299.txt  a008446.151205.Thomas.txt  a010719.151013.Thomas.txt  a011376.160310.Thomas.txt  a011952.dm11.txt  a013127.sp299.txt  a013791.sp58.txt  a013840.vnir.txt  a013841.150226.Thomas.txt  (+9 more)
outputs/: koi_summary_blurbs.json
scripts/: bootstrap_data.py  export_ui_data.py  generate_neo_tags.py  load_neo_names.py  merge_blurbs.py
src/exoproximo/: __init__.py  cli.py  config.py  io.py
tests/: conftest.py  test_cli.py  test_export_ui_data.py  test_features_spectra.py  test_imports.py  test_io.py  test_ml_anomaly.py  test_ml_classify.py  test_ml_cluster.py  test_pipeline_fetch.py  test_pipeline_koi.py  test_pipeline_neo_orbits.py  test_pipeline_neo_spectra.py
tests/fixtures/: koi_small.parquet
ui/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
ui/tests-e2e/: smoke.spec.ts
(+2890 files in other folders)
