[project]
name = "exoproximo"
version = "0.2.0"
description = "Plain-Python ML/AI pipelines over near-Earth-object and exoplanet data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26,<2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.38",
    "astroquery>=0.4.7",
    "astropy>=6.1",
    "typer>=0.12",
    "joblib>=1.4",
    "tqdm>=4.66",
    "requests>=2.32",
    "pyarrow>=17.0",
    "matplotlib>=3.9",
]

[project.scripts]
exo = "exoproximo.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exoproximo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:hdbscan",
    "ignore::DeprecationWarning:umap",
]

[tool.ruff]
line-length = 100
target-version = "py311"
